--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,19 @@
 {
-    "name": "michael/evozon-lab4",
-    "type": "project",
-    "authors": [
-        {
-            "name": "Michael",
-            "email": "michael.terhovhannisyan@gmail.com"
-        }
-    ],
-    "autoload": {
-        "psr-4": {"App\\": "src/"}
-    },
-    "require": {}
+  "name": "michael/evozon-lab4",
+  "type": "project",
+  "authors": [
+    {
+      "name": "Michael",
+      "email": "michael.terhovhannisyan@gmail.com"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
+  },
+  "files": [
+    "src/Helpers/Helpers.php"
+  ],
+  "require": {}
 }
